--- a/css/header.css
+++ b/css/header.css
@@ -1,11 +1,3 @@
-.container {
-    width: 80%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
 .header {
     background: #1A0002;
     z-index: 9;
@@ -94,11 +86,11 @@ ul {
     text-decoration: none;
 }
 
-/* .header-desktop li a:hover {
+.header-desktop li a:hover {
     color: #D9985F;
     font-family: 'Merriweather', serif;
     text-decoration: none;
-} */
+}
 
 .margin-right-40 {
     margin-right: 40px;
@@ -146,6 +138,7 @@ ul {
     right: 3%;
     width: 220px;
     padding: 30px 15px 20px 15px;
+    border-radius: 10px;
     -webkit-transition: all .5s, background, 2s .5s linear;
     transition: all .5s, background 2s .5s linear;
 }
