--- a/css/header.css
+++ b/css/header.css
@@ -1,144 +1,87 @@
-.header {
-    background: #1A0002;
-    z-index: 9;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
+.navbar {
+    width: 100% !important;
 }
 
-.bg-darkred {
-    background-color: #1A0002;
-    padding: 0;
+body .navbar.bg-dark {
+    background: #1A0002 !important;
 }
 
-.header-images {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 30px 0;
+body .navbar.border-bottom {
+    border-bottom: 1px solid #422426 !important;
 }
 
 .header-logo {
     width: 150px;
 }
 
-.logo-open {
-    color: white;
+button.navbar-toggler {
+    border-style: none;
 }
 
-.logo-open i {
+button.navbar-toggler:focus {
+    outline: none;
+}
+
+.fa-bars {
     font-size: 25px;
 }
 
-.header li {
-    margin: 24px 0;
+.dropdown-menu {
+    background-color: #1A0002 !important;
 }
 
-.header li a {
-    color: #ffffff;
+.dropdown-item {
+    background-color: #40050A !important;
+    color: #ffffff !important;
+    font-family: 'Merriweather', serif !important;
+    text-decoration: none;
+}
+
+.dropdown-item:hover {
+    color: #D9985F !important;
     font-family: 'Merriweather', serif;
     text-decoration: none;
 }
 
-.padding-t-b-20 {
-    padding-top: 20px;
-    padding-bottom: 20px;
+.nav-link {
+    color: #ffffff !important;
+    font-family: 'Merriweather', serif !important;
+    text-decoration: none;
+    line-height: 1.6;
 }
 
-.header .header-sub-menu-item p {
-    color: #ffffff;
-    font-family: 'Merriweather', serif;
-}
-
-.header-sub-menu {
-    background: #40050A;
-    border-radius: 4px;
-    padding: 1rem 0 1rem 1rem; 
-}
-
-ul {
-    list-style: outside none none;
-    margin: 0;
-    padding: 0;
-}
-
-.header-actions-container {
-    border-top: 1px solid #615f5f
-}
-
-.header-desktop {
-    background: #1A0002;
-    overflow: hidden;
-    width: 100%;
-}
-
-.header-desktop .header-images {
-    margin: 20px 0;
-}
-
-.header-desktop ul {
-    margin-bottom: 0 !important;
-}
-
-.header-desktop li a {
-    color: #ffffff;
+.nav-link:hover {
+    color: #D9985F !important;
     font-family: 'Merriweather', serif;
     text-decoration: none;
 }
 
-.header-desktop li a:hover {
-    color: #D9985F;
-    font-family: 'Merriweather', serif;
+.text-white {
+    font-family: 'Merriweather', serif !important;
     text-decoration: none;
 }
 
-.margin-right-40 {
-    margin-right: 40px;
+.btn-outline-light{
+    color: #FFF !important;
+    font-family: 'Merriweather', serif !important;
 }
 
-.width-80-porcent {
-    width: 80%;
+.btn-outline-light:hover {
+    background-color: #D9985F !important;
+    border: 1px solid #D9985F !important;
+    color: #1A0002 !important;
+    font-family: 'Merriweather', serif !important;
 }
 
-.areas-dropdown {
-    cursor: pointer;
-    position: static;
-    z-index: 1;
+.btn-outline-light:focus {
+    box-shadow: none !important;
 }
 
-.areas-dropdown li {
-    color: white;
-    font-family: 'Merriweather', serif;
+/* DROPDOWN DESKTOP */
+.dropdown-desktop.dropdown .dropdown-menu {
+    display: none;
 }
 
-.areas-dropdown li:hover {
-    color: #D9985F;
-}
-
-.ul-dropdown {
-    background-color: #1A0002;
-    position: absolute;
-    z-index: 2;
-    opacity: 0;
-    padding: 0;
-    margin: 0;
-    visibility: hidden;
-    text-align: center;
-}
-
-.ul-dropdown li:first-child {
-    cursor: default;
-}
-
-.areas-dropdown:hover .ul-dropdown {
-    background: #1A0002;
-    opacity: 1;
-    visibility: visible;
-    z-index: 2;
-    right: 3%;
-    width: 220px;
-    padding: 30px 15px 20px 15px;
-    border-radius: 10px;
-    -webkit-transition: all .5s, background, 2s .5s linear;
-    transition: all .5s, background 2s .5s linear;
+.dropdown-desktop.dropdown:hover .dropdown-menu {
+    display: block;
 }
