--- a/css/perfil.css
+++ b/css/perfil.css
@@ -7,27 +7,32 @@
     margin-bottom: 0 !important;
 }
 
-.perfil-content .cover-adv {
+.perfil-content .profile .cover-profile {
+    max-height: 320px;
+}
+
+.perfil-content .cover-profile .cover-adv {
     width: 100%;
     max-height: 250px;
     border-top-left-radius: 10px !important;
     border-top-right-radius: 10px !important;
 }
 
-.perfil-content .cover-adv .img-cover {
+.perfil-content .cover-profile .cover-adv .img-cover {
     background-size: cover;
     background-position: center;
     object-fit: cover;
     width: 100%;
-    max-height: 120px;
+    max-height: 250px;
     border-top-left-radius: 10px !important;
     border-top-right-radius: 10px !important;
 }
 
-.perfil-content .img-perfil-adv {
-    width: 140px;
-    height: 140px;
-    top: 75px;
+.perfil-content .cover-profile .img-perfil-adv {
+    max-width: 200px;
+    max-height: 200px;
+    left: 45px;
+    bottom: -70px;
 }
 
 .perfil-content .datas-adv {
@@ -69,53 +74,4 @@
     background-size: cover;
     background-position: center;
     object-fit: cover;
-}
-
-/* PERFIL BREAKPOINT */
-@media screen and (min-width: 375px){
-    .perfil-content .cover-adv .img-cover {
-        max-height: 150px;
-    }
-
-    .perfil-content .img-perfil-adv {
-        width: 150px;
-        height: 150px;
-        top: 100px;
-    }
-
-    .perfil-content .datas-adv {
-        margin-top: 45px;
-    }
-}
-
-@media screen and (min-width: 425px){
-    .perfil-content .cover-adv .img-cover {
-        max-height: 180px;
-    }
-
-    .perfil-content .img-perfil-adv {
-        width: 180px;
-        height: 180px;
-        top: 115px;
-    }
-
-    .perfil-content .datas-adv {
-        margin-top: 65px;
-    }
-}
-
-@media screen and (min-width: 1024px){
-    .perfil-content .cover-adv .img-cover {
-        max-height: 250px;
-    }
-
-    .perfil-content .img-perfil-adv {
-        width: 190px;
-        height: 190px;
-        top: 180px;
-    }
-
-    .perfil-content .social-media {
-        margin-top: 65px;
-    }
 }
